# rust-base

./: Cargo.toml  configuration.yml
docker/: Dockerfile  configuration.yml
src/: configuration.rs  lib.rs  main.rs
src/routes/: mod.rs
