[package]
name = "rust_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_base"

[dependencies]
actix-web = "4"
config = "0.12.0"
serde = "1.0.136"
tokio = "1.0"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "uuid", "chrono" ] }
tracing-log = "0.1.2"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = { version = "0.3.10", features = ["registry","env-filter"] }
tracing = { version = "0.1.32", features = ["log"] }
tracing-actix-web = "0.5.1"
